// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BandScale should create ticks for interval: -1 domain: ["A", "B", "C", "D", "E", "F", "G", "H", "I"] case 1`] = `
[
  "A",
  "B",
  "C",
  "D",
  "E",
  "F",
  "G",
  "H",
  "I",
]
`;

exports[`BandScale should create ticks for interval: -1.5 domain: ["A", "B", "C", "D", "E", "F", "G", "H", "I"] case 1`] = `
[
  "A",
  "B",
  "C",
  "D",
  "E",
  "F",
  "G",
  "H",
  "I",
]
`;

exports[`BandScale should create ticks for interval: -2 domain: ["A", "B", "C", "D", "E", "F", "G", "H", "I"] case 1`] = `
[
  "A",
  "C",
  "E",
  "G",
  "I",
]
`;

exports[`BandScale should create ticks for interval: 0 domain: ["A", "B", "C", "D", "E", "F", "G", "H", "I"] case 1`] = `[]`;

exports[`BandScale should create ticks for interval: 1 domain: ["A", "B", "C", "D", "E", "F", "G", "H", "I"] case 1`] = `
[
  "A",
  "B",
  "C",
  "D",
  "E",
  "F",
  "G",
  "H",
  "I",
]
`;

exports[`BandScale should create ticks for interval: 1.5 domain: ["A", "B", "C", "D", "E", "F", "G", "H", "I"] case 1`] = `
[
  "A",
  "C",
  "E",
  "G",
  "I",
]
`;

exports[`BandScale should create ticks for interval: 2 domain: ["A", "B", "C", "D", "E", "F", "G", "H", "I"] case 1`] = `
[
  "A",
  "C",
  "E",
  "G",
  "I",
]
`;

exports[`BandScale should create ticks for interval: 3 domain: ["A", "B", "C", "D", "E", "F", "G", "H", "I"] case 1`] = `
[
  "A",
  "D",
  "G",
]
`;

exports[`BandScale should create ticks for interval: 4 domain: ["A", "B", "C", "D", "E", "F", "G", "H", "I"] case 1`] = `
[
  "A",
  "E",
  "I",
]
`;
